crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_temperature_and_top_p_and_max_tokens.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "inferenceConfig": {
    "maxTokens": 256,
    "temperature": 0.699999988079071,
    "topP": 0.8999999761581421
  },
  "messages": [
    {
      "content": [
        {
          "text": "Hello."
        }
      ],
      "role": "user"
    }
  ]
}
