crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_tool_result_is_error.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: body
---
{
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "toolResult": {
            "toolUseId": "call_1",
            "content": [
              {
                "text": "permission denied"
              }
            ],
            "status": "error"
          }
        }
      ]
    }
  ]
}
