crates/roundhouse-provider/tests/snapshots/golden_bedrock_converse__bedrock_converse_unicode_content.snap
---
source: crates/roundhouse-provider/tests/golden_bedrock_converse.rs
expression: "encode(&req, &fixture_profile())"
---
{
  "messages": [
    {
      "content": [
        {
          "text": "こんにちは 🌍 — café naïve"
        }
      ],
      "role": "user"
    }
  ]
}
